debuggin ReliefProvider and finnalising the Meanders